--- a/MvcApplication1/Views/Home/About.cshtml
+++ b/MvcApplication1/Views/Home/About.cshtml
@@ -1,8 +1,18 @@
-﻿@{
-    ViewBag.Title = "About Us";
+﻿@model CloudScheduler.ViewModels.InstanceListVM
+@{
+    ViewBag.Title = "ScheduleChange";
 }
-
-<h2>About</h2>
-<p>
-     Put content here.
-</p>
+<div>   
+    <table border ="1">  
+        <tr> 
+            <td></td>
+            <th>Monday</th>
+            <th>Tuesday</th>
+            <th>Wednesday</th>
+	        <th>Thursday</th>
+            <th>Friday</th>
+            <th>Saturday</th>
+            <th>Sunday</th>
+        </tr>
+    </table>
+</div>
