More Stuff Completed

--- a/MvcApplication1/Views/Schedule/Edit.cshtml
+++ b/MvcApplication1/Views/Schedule/Edit.cshtml
@@ -7,6 +7,7 @@
 <div>
     <h3>@Model.InstanceId</h3>
     @Html.TextBoxFor(x => x.InstanceId,new { style="display:none" })
+    @Html.TextBoxFor(x => x.Active,new { style="display:none" })
     <table border ="1">
         <tr>
             <th>Monday</th>
