--- a/MvcApplication1/Content/Site.css
+++ b/MvcApplication1/Content/Site.css
@@ -215,22 +215,21 @@ input[type="submit"] {
 ----------------------------------------------------------*/
 
 table {
-    border: solid 1px #959595;
+    border: solid 1px #e8eef4;
     border-collapse: collapse;
 }
 
 table td {
     padding: 5px;
-    border: solid 1px #959595;
+    border: solid 1px #e8eef4;
 }
 
 table th {
     padding: 6px 5px;
     text-align: left;
-    background-color: #959595;
-    border: solid 1px #959595;
+    background-color: #e8eef4;
+    border: solid 1px #e8eef4;
 }
-
 /* MISC  
 ----------------------------------------------------------*/
 .clear {
